# PML_2024

./: .gitignore  B1_B2.ipynb  README.md  pyproject.toml
assignment_1/: model.py
assignment_2/: gp_mauna_loa.py  nn_model.py
diffusion_model/: config.py  ddpm.py  ema.py  eval.py  likelihood.py  loss.py  run.sh  sampling.py  sde_diffusion.py  train.py  train_with_config.py  unet.py
exam_project/: importance_sampling_t.ipynb  low_discrepancy.ipynb
notebooks/: assignment_1.ipynb  assignment_2.ipynb
